test/should_pass/hom_007.grg
actions hom_007 using deep_model_001;

rule r {
	pattern {
		x:A -e:Edge-> y:Ac -f:Edge-> z:B <-:Edge- zz:AB;
		hom(x, y);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

