test/should_fail/hom_002.grg
actions hom_002 using deep_model_001;

rule r {
	pattern {
		x:A -e:Edge-> y:Ac -f:Edge-> z:B <-:Edge- zz:AB;
		hom(x, y, z, zz);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

